--- a/client/main.html
+++ b/client/main.html
@@ -31,10 +31,10 @@ BODY {
 
 
 <div id='games' style="border-style:solid; border-width:1px; height:120px; width:500px; overflow:auto;">
-    <a href="" onclick="createGame(); return false";>Создать игру</a>
+    <a href="" onclick="createGame(); return false";>Создать игру</a><br>
+    <a href="" onclick="connect.sendData(['create_map']); return false";>Редактор карт</a><br>
     <select id='mapslist' size=1>
     </select>
-    <a href="" onclick="connect.sendData(['create_map']); return false";>Редактор карт</a>
     <div>Список игр</div>
 </div>
 </body>
