--- a/client/main.html
+++ b/client/main.html
@@ -30,6 +30,9 @@ BODY {
 </div>
 
 
+<div id='scores' style="border-style:solid; border-width:1px; height:120px; width:500px; overflow:auto;">
+    <p>Очки</p>
+</div>
 <div id='games' style="border-style:solid; border-width:1px; height:120px; width:500px; overflow:auto;">
     <a href="" onclick="createGame(); return false";>Создать игру</a><br>
     <a href="" onclick="connect.sendData(['create_map']); return false";>Редактор карт</a><br>
