--- a/client/main.html
+++ b/client/main.html
@@ -1,11 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<style type="text/css">
-BODY {
-   margin: 0px;
-   padding: 0px;
-}
-</style>
 <title>Python</title>
 <meta charset="UTF-8">
 <script type="text/javascript" src="preload.js" version=1.8></script>
@@ -15,11 +9,12 @@ BODY {
 <script type="text/javascript" src="control.js" version=1.8></script>
 <script type="text/javascript" src="game.js" version=1.8></script>
 <script type="text/javascript" src="connect.js" version=1.8></script>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<canvas id="canvas" width="110" height="110" style="display: none;"></canvas>
+<canvas id="canvas"></canvas>
 
-<div id='etitorTools' style="border-style:solid; border-width:1px; overflow:auto; display: none;">
+<div id='etitorTools'>
     X<input type='text' id='Size_X' pattern='^[ 0-9]+$' onchange="game.setSizeX();" size=4>
     Y<input type='text' id='Size_Y' pattern='^[ 0-9]+$' onchange="game.setSizeY();" size=4>
     <br>
@@ -29,11 +24,11 @@ BODY {
     <a href="" onclick="game.disableMapEditor(); return false";>Выйти из редактора</a>
 </div>
 
-
-<div id='scores' style="border-style:solid; border-width:1px; height:120px; width:500px; overflow:auto;">
+<div id='scores'>
     <p>Очки</p>
 </div>
-<div id='games' style="border-style:solid; border-width:1px; height:120px; width:500px; overflow:auto;">
+
+<div id='games'>
     <a href="" onclick="createGame(); return false";>Создать игру</a><br>
     <a href="" onclick="connect.sendData(['create_map']); return false";>Редактор карт</a><br>
     <select id='mapslist' size=1>
