изменения с очками и добавил send_fun в модуль  sender

--- a/client/main.html
+++ b/client/main.html
@@ -24,8 +24,9 @@
     <a href="" onclick="game.disableMapEditor(); return false";>Выйти из редактора</a>
 </div>
 
-<div id='scores'>
-    <p>Очки</p>
+<div id='scores_tab'>
+    Очки
+    <div id='scoreslist'></div>
 </div>
 
 <div id='games'>
